################################################################################
#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

190313 Martin Raden :
 * IntaRNA/IndexRangeList :
   + allowOverlapping member
   + isAllowingOverlap() 
   * constructor( + allowOverlapping )
   + reverseInplace() : renamed non-const reverse method to make intention clear
   - reverse() : replaced by reverseInplace()
   * ostream operator now friend function
   * covers() :
   * overlaps() :
   * insert() :
     + support for non-overlapping ranges added
 * IntaRNA/Interaction : 
   * Seed :
     + constructor() to enable default and explicit initialization
     + < operator to enable automated (energy-based) sorting
   + SeedSet : (energy-sorted) set of seeds
   * seed member now SeedSet* (was Seed*) to support storage of multiple seeds
   + getSeedRanges*() : provides an (overlapping) IndexRangeList of all seeds
     stored within the interaction for the respective sequence
   * ostream operator( BasePair ) now friend function
 * IntaRNA/SeedHandler :
   * traceBackSeed() now const function
   + isSeedBound() : to check whether or not base pair marks a left-side seed
     boundary
   + addSeeds() : adds all seeds that overlap with base pairs of a given
     interaction to its internal seed list
 * IntaRNA/SeedHandler* :
   + isSeedBound() 
   * traceBackSeed() const
 * IntaRNA/SeedHandlerExplicit :
   + getSeedMaxBP() : provides the maximal number of base pairs within one of
     the explicit seed encoded by the provided string
 * IntaRNA/SeedHandlerMfe :
   * getSeedE() const
 * IntaRNA/Predictor*Seed :
   + using SeedHandler::isSeedBound()
   + calling seedHandler.addSeeds(interaction) for each interaction
 * IntaRNA/HelixHandler* :
   + using SeedHandler::isSeedBound()
 * IntaRNA/OutputConstraint :